cover image styling to stop stretch

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,15 +59,15 @@ ul {
   }
 }
 
-/* img{
-  width: 100%;
-  height: auto;  
-  object-fit:fill;
+img{
+  /* width: 100%;
+  height: auto;   */
+  object-fit:cover;
   position:relative;
-} */
+}
 
 /* .plants{
- width: 100%;
+  width: 100%;
   height:auto; 
   object-fit:cover;
   position:relative;
